# app/Http/Controllers/InviteController.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Actions\Invites\AcceptInviteAction;
+use App\Actions\Invites\SendInviteAction;
+use App\Http\Requests\Invite\InviteStoreRequest;
+use App\Mail\MailInvite;
+
+class InviteController extends Controller
+{
+    public function store(InviteStoreRequest $request, $orgId, $roleId, SendInviteAction $action)
+    {
+        return $action->handle($request->all(), $orgId, $roleId);
+    }
+
+    public function accept($token, AcceptInviteAction $action)
+    {
+        return $action->handle($token);
+    }
+}
